--- a/notebooks/generate_embeddings.ipynb
+++ b/notebooks/generate_embeddings.ipynb
@@ -23,7 +23,7 @@
     "    chart_from_components,\n",
     "    indices_of_nearest_neighbors_from_distances,\n",
     ")\n",
-    "openai.api_key='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'\n",
+    "openai.api_key='Put your api key here'\n",
     "EMBEDDING_MODEL = \"text-embedding-ada-002\""
    ]
   },
